fix responsive on small screens

--- a/style.css
+++ b/style.css
@@ -296,7 +296,11 @@ button[type="submit"]:active {
 
 
 @media (max-width: 480px) {
-   
+    .summary{
+        grid-template-columns: 1fr;
+        gap: 16px;
+    }
+ }
 
     .container{
         padding: 24px;
